--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <body>
         <div id="map"></div>
         <div style="display: none;">
-            <script src="js/map.js"></script>
             <div id='mode-select' class="custom mode">
                 <button>
                     <svg class='icon'>
@@ -42,6 +41,9 @@
                     <div class='container'></div>
                 </div>
             </div>
+        </div>
+        <script src="js/key.js"></script>
+        <script src="js/map.js"></script>
     </body>
 
 </html>
