--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta charset="utf-8" />
     <title>TSR Map</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-scale/1.0.7/d3-scale.min.js"></script>
+    <script src="https://d3js.org/d3-array.v2.min.js"></script>
+    <script src="https://d3js.org/d3-scale.v3.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js"></script>
     <script src="https://unpkg.com/custom-range@1/range.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mapbox/assembly@0.25.0/dist/assembly.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css" type="text/css" />
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mapbox/assembly@0.25.0/dist/assembly.css" rel="stylesheet">
-    <link rel=stylesheet href="https://unpkg.com/custom-range@1/range.css" />
-    <link rel='stylesheet' href='css/style.css' />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mapbox/assembly@0.25.0/dist/assembly.css" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/custom-range@1/range.css" type="text/css" />
+    <link rel='stylesheet' href='css/style.css' type="text/css" />
 </head>
 
 <body>
