--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id='fill-select' class="custom mode">
                 <button>
                     <svg class='icon'>
-                        <use xlink:href='#icon-inspect' /></svg>
+                        <use xlink:href='#icon-paint' /></svg>
                 </button>
             </div>
             <div class='legend custom round'>
