--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </button>
             </div>
             <div class='legend custom round'>
-                <div class='block title'>House Prices as a Multiple of Median Salary
+                <div class='block title'>House Prices as a Multiple of Median UK Salary
                 </div>
                 <div class="row">
                     <div class='container'></div>
